      (and for Mac, Option(aka Alt)-Delete/ForwardDelete, and move by word
      with Option-Left/Right).  The old Ctrl-Backspace key to delete all
      records after the current has changed to Shift-Backspace.  You can
      also press Delete on the <-- Record # --> line instead. [Ralph]
    * Raised the limit on hero definitions from 60 to 512 [Ralph]
    * Added "Export scripts backup copy" option to Script Management menu
      (HSpeak has saved a backup copy of scripts for years now) [Ralph]

  * New Plotscripting Features
    * "menu item at pixel" [Ralph, James]
    * You can now profile scripts (collect statistics on running times)
      by pressing Ctrl+F9. (Before, you had to download a special build
      to profile scripts.) More useful stats are now collected. [Ralph]
    * "run game" quits the current game and loads a different game
      (.rpg file/.rpgdir), and "check game exists" [Ralph]
    * You can now pass arguments to the newgame and loadgame scripts by
      giving extra arguments to "resetgame" and "loadfromslot" [Ralph]
    * "reparent to npc" and "reparent to hero" convenience functions
      [James]
    * Added "show new game" argument to "load menu" command [Ralph]
    * "get battle countdown" and "set battle countdown" [Ralph]
    * "check wall collision x", "check wall collision y",
      "move slice with wallchecking" [Ralph]
    * "slice parent" alias to "parent slice"
    * "get npc speed"
    * Added "textbox text" to read all lines from a textbox into a
      string variable at once [Matthias]
    * -= and += now return their result, like := does, so they can be
      used as expressions [Ralph]
    * "load sprite" and "replace sprite" (general versions of "load
      hero sprite", etc) [Ralph]

  * Changes
    * Sound effects used to play at max volume, which has now changed
      to a default of 80% (because music defaulted to just 50%). In
      newly created games the defaults are both 75%. [Ralph]