@@ -930,7 +930,7 @@ FUNCTION curbinsize (byval id as integer) as integer
  IF id = binSTF        THEN RETURN 84  '.stf
  IF id = binSONGDATA   THEN RETURN 32  'songdata.bin
  IF id = binSFXDATA    THEN RETURN 34  'sfxdata.bin
- IF id = binMAP        THEN RETURN 404 '.map
+ IF id = binMAP        THEN RETURN 756 '.map
  IF id = binMENUS      THEN RETURN 54  'menus.bin
  IF id = binMENUITEM   THEN RETURN 64  'menuitem.bin
  IF id = binUICOLORS   THEN RETURN 126 'uicolors.bin
@@ -4896,7 +4896,15 @@ END SUB
 
 FUNCTION layer_tileset_index(byval layer as integer) as integer
 'return the gmap() index containing a layer's tileset
- IF layer <= 2 THEN RETURN 22 + layer ELSE RETURN 23 + layer
+ IF layer <= 2 THEN
+  RETURN 22 + layer
+ ELSEIF layer <= 7 THEN
+  RETURN 26 + (layer - 3)
+ ELSEIF layer <= 15 THEN
+  RETURN 370 + (layer - 8)
+ ELSE
+  debugc errPromptBug, "layer_tileset_index: Bad map layer " & layer
+ END IF
 END FUNCTION
 
 SUB loadmaptilesets (tilesets() as TilesetData ptr, gmap() as integer, resetanimations as bool = YES)
