@@ -275,7 +275,7 @@ CONST maxMaxHero = 511 'This is the max value possible for gen(genMaxHero)
 CONST sizeActiveParty = 4 'The size of the active/battle party
 CONST sizeParty = 41 'The maximum size of the entire party (length of gam.hero())
 CONST inventoryMax = 599 'last inventory slot num (divisible by 3 when you count the zero)
-CONST maplayerMax = 7 'The limit on the highest numbered map layer
+CONST maplayerMax = 15 'The limit on the highest numbered map layer
 CONST mapTilesMax = 100000 'Maximum map size, in tiles (note also a limit of 32768 tiles wide or high)
 CONST dissolveTypeMax = 10 'Highest numbered frame dissolve effect
 CONST maxElements = 64 'Maximum selectable number of elements
