@@ -4756,6 +4756,14 @@ lookup slice(sl:map layer4)
 lookup slice(sl:map layer5)
 lookup slice(sl:map layer6)
 lookup slice(sl:map layer7)
+lookup slice(sl:map layer8)
+lookup slice(sl:map layer9)
+lookup slice(sl:map layer10)
+lookup slice(sl:map layer11)
+lookup slice(sl:map layer12)
+lookup slice(sl:map layer13)
+lookup slice(sl:map layer14)
+lookup slice(sl:map layer15)
 lookup slice(sl:status portrait)
 lookup slice(sl:status walkabout)
 lookup slice(sl:status battlesprite)
