@@ -319,6 +319,14 @@ FUNCTION SliceLookupCodename (byval code as integer) as string
   CASE SL_MAP_LAYER5: RETURN "map_layer5"
   CASE SL_MAP_LAYER6: RETURN "map_layer6"
   CASE SL_MAP_LAYER7: RETURN "map_layer7"
+  CASE SL_MAP_LAYER8: RETURN "map_layer8"
+  CASE SL_MAP_LAYER9: RETURN "map_layer9"
+  CASE SL_MAP_LAYER10: RETURN "map_layer10"
+  CASE SL_MAP_LAYER11: RETURN "map_layer11"
+  CASE SL_MAP_LAYER12: RETURN "map_layer12"
+  CASE SL_MAP_LAYER13: RETURN "map_layer13"
+  CASE SL_MAP_LAYER14: RETURN "map_layer14"
+  CASE SL_MAP_LAYER15: RETURN "map_layer15"
   CASE SL_STATUS_PORTRAIT: RETURN "status_portrait"
   CASE SL_STATUS_WALKABOUT: RETURN "status_walkabout"
   CASE SL_STATUS_BATTLESPRITE: RETURN "status_battlesprite"
