@@ -49,6 +49,14 @@ CONST SL_MAP_LAYER4           = -101004
 CONST SL_MAP_LAYER5           = -101005
 CONST SL_MAP_LAYER6           = -101006
 CONST SL_MAP_LAYER7           = -101007
+CONST SL_MAP_LAYER8           = -101008
+CONST SL_MAP_LAYER9           = -101009
+CONST SL_MAP_LAYER10          = -101010
+CONST SL_MAP_LAYER11          = -101011
+CONST SL_MAP_LAYER12          = -101012
+CONST SL_MAP_LAYER13          = -101013
+CONST SL_MAP_LAYER14          = -101014
+CONST SL_MAP_LAYER15          = -101015
 CONST SL_STATUS_PORTRAIT      = -102000
 CONST SL_STATUS_WALKABOUT     = -102001
 CONST SL_STATUS_BATTLESPRITE  = -102002
